# libemf

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  libemf_1.0.11.orig.tar.xz.delta  libemf_1.0.11.orig.tar.xz.id  libemf_1.0.12.orig.tar.xz.delta  libemf_1.0.12.orig.tar.xz.id  libemf_1.0.13.orig.tar.xz.delta  libemf_1.0.13.orig.tar.xz.id  libemf_1.0.9+git.10.3231442.orig.tar.gz.delta  libemf_1.0.9+git.10.3231442.orig.tar.gz.id  libemf_1.0.9+git.8.dd72f19.orig.tar.gz.delta  libemf_1.0.9+git.8.dd72f19.orig.tar.gz.id  libemf_1.0.9+git.9.e2f97d9.orig.tar.gz.delta  libemf_1.0.9+git.9.e2f97d9.orig.tar.gz.id  libemf_1.0.9.orig.tar.gz.delta  libemf_1.0.9.orig.tar.gz.id
config/: CMakeLists.txt  config.cmake.h.in  config.guess  config.h  config.h.in  config.sub
debian/: .gitignore  README.source  changelog  control  copyright  libemf-doc.doc-base.html  libemf-doc.doc-base.manual  libemf-doc.docs  libemf-doc.links  libemf-doc.manpages  libemf1.install  rules  watch
debian/patches/: 0001-autotools-updates.patch  0002-C-fixes.patch  0002-autoconf-AS_HELP_STRING.patch  0003-remove-doc-doxygen-subdir.patch  0004-add-build-time-doxygen-support-via-autotools.patch  0005-typo-in-doc-string.patch  0006-Add-initial-patch-for-aarch64-support-likely-needs-m.patch  0006-add-support-riscv64.patch  0007-Handle-EOF-and-other-errors-in-an-endianness-aware-w.patch  0007-add-support-loongarch64.patch  0008-GCC-16.patch  0008-deprecated.patch  0009-test-concurrency.patch  series
doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  documentation.dox
doc/html/: annotated.html  classEMF_1_1BRUSH-members.html  classEMF_1_1BRUSH.html  classEMF_1_1DATASTREAM-members.html  classEMF_1_1DATASTREAM.html  classEMF_1_1EMRARC-members.html  classEMF_1_1EMRARC.html  classEMF_1_1EMRARCTO-members.html  classEMF_1_1EMRARCTO.html  classEMF_1_1EMRBEGINPATH-members.html  (+277 more)
include/: Makefile.am  Makefile.in  emf.h
include/libEMF/: Makefile.am  Makefile.in  emf.h
include/libEMF/wine/: winnt.h
libemf/: CMakeLists.txt  Makefile.am  Makefile.in  dual-build-CMakeLists.txt  libemf.cpp  libemf.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  printemf.c
tests/: CMakeLists.txt  Makefile.am  Makefile.in  check1.c  check2.c  check3.c  check4.c  docheck1  docheck1.sh  docheck2  docheck3  docheck3.sh  example1.c  example2.c
tests/emfs/: check1.emf  check3.emf
(+68 files in other folders)
